Add new feedback types
